...
import RxCocoa

class UserListViewModel: ViewModel {
    private let useCase: UserListUsecase
    private let navigator: UserListNavigator
    
    fileprivate let userList = BehaviorRelay<[GitHubUser]>(value: [])
    fileprivate let selectedUserAction = PublishRelay<GitHubUser>()
    fileprivate let loadMoreTrigger = PublishRelay<Void>()
    fileprivate let refreshTrigger = PublishRelay<Void>()
    
    private var page = 0
    private var itemPerPage = 20
...
