...
        defaultBackButton.setTitle(nil, for: .normal)
        
        defaultBackButton.snp.makeConstraints { make in
            make.edges.equalToSuperview()
        }
        defaultBackButton.addTarget(self, action: #selector(pop), for: .touchUpInside)
        defaultBackButton.accessibilityIdentifier = "backButton"
        
        let customBackButton = UIBarButtonItem(customView: containerView)
        return customBackButton
    }()
    
    @objc private func pop() {
...
